--- a/src/styles/register.scss
+++ b/src/styles/register.scss
@@ -69,3 +69,17 @@
     }
   }
 }
+
+@media screen and (max-width: 512px) {
+  .register {
+    .container {
+      // align-items: center;
+      align-content: start;
+      justify-items: center;
+
+      form {
+        width: 350px;
+      }
+    }
+  }
+}
